User signup & sign inadded

--- a/fullstack-project/public/styles/style.scss
+++ b/fullstack-project/public/styles/style.scss
@@ -10,3 +10,19 @@ body {
 a {
   color: $link-color;
 }
+.card{
+  margin: auto;
+}
+.card-body{
+  text-align: center;
+}
+.card-body input {
+  width: 300px;
+}
+.main{
+  text-align: center;
+}
+.main img{
+  width: 500px;
+  height: 400px;
+}
