--- a/fullstack-project/views/index.hbs
+++ b/fullstack-project/views/index.hbs
@@ -1,2 +1,8 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+<br>
+<br>
+<a href="/signup">Sign up</a>
+<br>
+<br>
+<a href="/signin">Sign in</a>
