--- a/fullstack-project/views/index.hbs
+++ b/fullstack-project/views/index.hbs
@@ -1,8 +1,97 @@
-<h1>{{title}}</h1>
+{{!-- <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 <br>
 <br>
 <a href="/signup">Sign up</a>
 <br>
 <br>
-<a href="/signin">Sign in</a>
+<a href="/signin">Sign in</a> --}}
+
+
+<div class="navi">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-0">
+  <a class="navbar-brand" href="#">Artisan</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <form class="form-inline my-4 my-lg-12 ">
+      <input class="form-control mr-sm-2" width="50px" height="50px" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+    </form>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto">
+        {{!-- mr-auto --}}
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/">Action</a>
+          <a class="dropdown-item" href="/">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+   
+  </div>
+</nav>
+</div>
+{{!-- 
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="/images/ceramics.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="/images/bags.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/images/drwaings.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div> --}}
+<div>
+<img src="/images/breads.jpg" width="500px" height="700px" class="rounded float-left img-fluid" alt="...">
+<img src="/images/jewelry.jpg" width="500px" height="700px" class="rounded float-left img-fluid" alt="...">
+<img src="/images/bags.jpg" width="400px" height="400px" class="rounded float-left" alt="...">
+</div>
+
+<div>
+<img src="/images/breads.jpg" width="400px" height="400px" class="rounded float-left" alt="...">
+<img src="/images/jewelry.jpg" width="400px" height="400px" class="rounded float-left" alt="...">
+<img src="/images/bags.jpg" width="400px" height="400px" class="rounded float-left" alt="...">
+</div>
+{{!-- 
+ <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="/images/ceramics.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/images/bags.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="/images/drwaings.jpg" alt="Third slide">
+    </div>
+  </div>
+</div>  --}}
