Seller signup/signin added, homepage updated

--- a/fullstack-project/views/authentication/sellersignin.hbs
+++ b/fullstack-project/views/authentication/sellersignin.hbs
@@ -1,7 +1,7 @@
 <div class="card" style="width: 22rem;" style="height: 500px;">
-    <form method="POST" action="/signin">
+    <form method="POST" action="/sellersignin">
         <div class="card-body">
-            <h5 class="card-title"><strong> Sign in</strong></h5>
+            <h5 class="card-title"><strong> Sign in - seller account</strong></h5>
         <br>
             <label for="Email">Email</label>
             <input type="email" name="email" required placeholder="Email">
