--- a/fullstack-project/views/authentication/sellersignup.hbs
+++ b/fullstack-project/views/authentication/sellersignup.hbs
@@ -1,7 +1,7 @@
 <div class="card" style="width: 22rem;" style="height: 500px;">
-    <form method="POST" action="/signup">
+    <form method="POST" action="/sellersignup">
         <div class="card-body">
-            <h5 class="card-title"><strong> Create artisian account</strong></h5>
+            <h5 class="card-title"><strong> Create your artisian seller account</strong></h5>
         <br>
             <label for="username">Name</label>
             <input type="text" name="name" placeholder="Name">
@@ -22,4 +22,4 @@
             <span>Already have an account? <a href="/signin">Sign in</a></span>
         </div>
     </form>
-</div>
+</div> 
