--- a/fullstack-project/views/index.hbs
+++ b/fullstack-project/views/index.hbs
@@ -21,7 +21,7 @@
     </form> --}}
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ml-auto">
+    <ul class="navbar-nav ml-auto py-md-3">
         {{!-- mr-auto --}}
       <li class="nav-item active">
         <a class="nav-link" href="/signin">User sign in <span class="sr-only">(current)</span></a>
