--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -1,1 +1,27 @@
 <h1>This is sellers page</h1>
+
+<div class="row d-flex justify-content-center">
+  {{#each images}}
+    <figure>
+      {{!-- <img src={{this.url}} alt={{this.description}}> --}} 
+      <img src={{this.resizedUrl}} alt={{this.description}}>
+      <p>{{this.description}}</p>
+    </figure>
+  {{/each}}
+</div> 
+
+<div class="container">
+     {{!-- enctype="multipart/form-data" --}}
+  <form method="POST" action="/sellerPage" enctype="multipart/form-data">
+    <div class="form-group">
+      <label for="upload-file">File</label>
+      <input id="upload-file" class="form-control" type="file" name="file">
+    </div>
+    <div class="form-group">
+      <label for="upload-description">Description</label>
+      <textarea id="upload-description" class="form-control" name="description" placeholder="Description of File"></textarea>
+    </div>
+    <button class="btn btn-primary">Upload file</button>
+  </form>
+</div>
+
