Upload image functionality added

--- a/fullstack-project/views/authentication/sellersignup.hbs
+++ b/fullstack-project/views/authentication/sellersignup.hbs
@@ -19,7 +19,7 @@
             {{!-- <button class="btn btn-primary"> Create account </button> --}}
             <button class="btn btn-outline-info btn-lg btn-block">Create account</button>
         <br>
-            <span>Already have an account? <a href="/signin">Sign in</a></span>
+            <span>Already have an account? <a href="/sellersignin">Sign in</a></span>
         </div>
     </form>
 </div> 
