--- a/fullstack-project/views/authentication/sellersignin.hbs
+++ b/fullstack-project/views/authentication/sellersignin.hbs
@@ -14,7 +14,7 @@
             {{!-- <button class="btn btn-primary"> Sign in</button> --}}
             <button class="btn btn-outline-info btn-lg btn-block">Sign in</button>
         <br>
-            <span>No account? <a href="/signup">Create account</a></span>
+            <span>No account? <a href="/sellersignup">Create account</a></span>
         </div>
     </form>
 </div>
