--- a/fullstack-project/views/index.hbs
+++ b/fullstack-project/views/index.hbs
@@ -30,6 +30,10 @@
         <a class="nav-link" href="/sellersignin">Seller sign in <span class="sr-only">(current)</span></a>
       </li>
 
+       <li class="nav-item active">
+        <a class="nav-link" href="/signout">Signout <span class="sr-only">(current)</span></a>
+      </li>
+
       {{!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
