--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -3,18 +3,18 @@
 <div class="row d-flex justify-content-center">
   {{#each images}}
     <figure>
-      {{!-- <img src={{this.url}} alt={{this.description}}> --}} 
       <img src={{this.resizedUrl}} alt={{this.description}}>
       <p>{{this.description}}</p>
     </figure>
   {{/each}}
 </div> 
 
+
 <div class="container">
      {{!-- enctype="multipart/form-data" --}}
   <form method="POST" action="/sellerPage" enctype="multipart/form-data">
     <div class="form-group">
-      <label for="upload-file">File</label>
+      <label for="upload-file">Image</label>
       <input id="upload-file" class="form-control" type="file" name="file">
     </div>
     <div class="form-group">
@@ -25,3 +25,4 @@
   </form>
 </div>
 
+<a href="/authentication/signout">Signout</a>
