--- a/fullstack-project/views/authentication/sellersignup.hbs
+++ b/fullstack-project/views/authentication/sellersignup.hbs
@@ -1,3 +1,4 @@
+<div class="top-card-space">
 <div class="card" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/sellersignup">
         <div class="card-body">
@@ -23,3 +24,4 @@
         </div>
     </form>
 </div> 
+</div>
