--- a/fullstack-project/views/authentication/usersignin.hbs
+++ b/fullstack-project/views/authentication/usersignin.hbs
@@ -1,3 +1,4 @@
+<div class="top-card-space">
 <div class="card" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/signin">
         <div class="card-body">
@@ -17,4 +18,5 @@
             <span>No account? <a href="/signup">Create account</a></span>
         </div>
     </form>
+</div>
 </div>
