--- a/fullstack-project/views/authentication/usersignup.hbs
+++ b/fullstack-project/views/authentication/usersignup.hbs
@@ -1,3 +1,4 @@
+<div class="top-card-space">
 <div class="card" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/signup">
         <div class="card-body">
@@ -22,4 +23,5 @@
             <span>Already have an account? <a href="/signin">Sign in</a></span>
         </div>
     </form>
+</div>
 </div>
