--- a/fullstack-project/views/index.hbs
+++ b/fullstack-project/views/index.hbs
@@ -23,13 +23,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto py-md-3">
         {{!-- mr-auto --}}
-      <li class="nav-item active ">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+     <li class="nav-item active">
+        <a class="nav-link" href="/signin">User sign in <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
+       <li class="nav-item active">
+        <a class="nav-link" href="/sellersignin">Seller sign in <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item dropdown">
+
+       <li class="nav-item active">
+        <a class="nav-link" href="/signout">Signout <span class="sr-only">(current)</span></a>
+      </li>
+
+      {{!-- <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
         </a>
@@ -42,7 +47,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+      </li> --}}
     </ul>
    
   </div>
