--- a/fullstack-project/views/product.hbs
+++ b/fullstack-project/views/product.hbs
@@ -1,1 +1,10 @@
 <h2>This is product page! User will be able to see products here</h2>
+
+ {{!-- <div class="row d-flex justify-content-center">
+  {{#each images}}
+    <figure>
+      <img src={{this.resizedUrl}} alt={{this.description}}>
+      <p>{{this.description}}</p>
+    </figure>
+  {{/each}}
+</div>   --}}
