--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -1,23 +1,46 @@
 
-<div class="row d-flex justify-content-center">
+{{!-- <div class="row d-flex justify-content-center">
   {{#each images}}
     <figure>
       <img src={{this.resizedUrl}} alt={{this.description}}>
       <p>{{this.description}}</p>
     </figure>
   {{/each}}
-</div> 
+</div>   --}}
 
+<div class="seller-products">
+{{#each images}}
+<div class="card col-4" style="width: 18rem;">
+  <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
+  <div class="card-body">
+    {{!-- <ul class="list-group list-group-horizontal"> --}}
+      <h5 class="card-title">Card title</h5> 
+      <p class="card-text">{{this.description}}</p> 
+      <p>$ {{this.price}}</p>
+      {{!-- <a href="#" class="btn btn-primary">Order</a> --}}
+    </ul>
+  </div>
+</div>
+{{/each}}
+</div>
+
+<form action="/sellerpage" method="Get" enctype="multipart/form-data">
+    <button>View collection</button>
+</form>
 
 <div class="container">
   <form method="POST" action="/sellerPage" enctype="multipart/form-data">
     <div class="form-group">
       <label for="upload-file">Image</label>
-      <input id="upload-file" class="form-control" type="file" name="file">
+      <input id="upload-file" required class="form-control" type="file" name="file">
     </div>
     <div class="form-group">
       <label for="upload-description">Description</label>
       <textarea id="upload-description" class="form-control" name="description" placeholder="Description of File"></textarea>
+    </div>
+    <div>
+      <label for="price">Price</label>
+      <input id="price" required type="text" name="price" placeholder="price">
     </div>
     <button class="btn btn-primary">Upload file</button>
   </form>
