Separating routes in process

--- a/fullstack-project/public/styles/style.css
+++ b/fullstack-project/public/styles/style.css
@@ -52,7 +52,7 @@ a {
   margin-top:3em;
   align-items: center;
   padding-left: 100px;
-  padding-right: 50px;
+  padding-right: 100px;
 }
 
 /* .seller-products img {
@@ -60,8 +60,8 @@ a {
   margin-right: 50px;
   height: 300px;
   width: auto;
-}
-*/
+}  */
+
 
 .card-body{
   text-align: center;
