--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -8,6 +8,8 @@
   {{/each}}
 </div>   --}}
 
+{{!-- Navigator the same as the nav --}}
+
 <div class="seller-products">
 {{#each images}}
 <div class="card col-4" style="width: 18rem;">
