new routes and bcryptjs added

--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -95,7 +95,8 @@
             </span>
             <h5 class="font-weight-bold text-uppercase">A one-of-a-kind community</h5>
             <p class="text-muted text-capitalize">
-              We are an online marketplace, where people come together to make, sell, buy, and collect unique items.
+              {{!-- We are an online marketplace, where people come together to make, sell, buy, and collect unique items. --}}
+              Platform for artisan
             </p>
           </div>
           <!-- end of single service -->
@@ -104,9 +105,9 @@
             <span class="service-icon">
               <i class="fas fa-phone-volume"></i>
             </span>
-            <h5 class="font-weight-bold text-uppercase">online support 24/7</h5>
+            <h5 class="font-weight-bold text-uppercase">Art</h5>
             <p class="text-muted text-capitalize">
-              we will assist you with your inquiries
+              Beautiful art
             </p>
           </div>
           <!-- end of single service -->
@@ -115,9 +116,9 @@
             <span class="service-icon">
               <i class="fas fa-dollar-sign"></i>
             </span>
-            <h5 class="font-weight-bold text-uppercase">money back gurantee</h5>
+            <h5 class="font-weight-bold text-uppercase">Art</h5>
             <p class="text-muted text-capitalize">
-              free 100% refund for 30 days
+              Art is universal
             </p>
           </div>
           <!-- end of single service -->
