--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -26,7 +26,7 @@
 {{/each}}
 </div>
 
-<form action="/sellerpage" method="Get" enctype="multipart/form-data">
+<form action="/sellerPage" method="Get" enctype="multipart/form-data">
     <button>View collection</button>
 </form>
 
