Routes modified, order page in progress

--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -1,12 +1,3 @@
-{{!-- <h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<br>
-<br>
-<a href="/signup">Sign up</a>
-<br>
-<br>
-<a href="/signin">Sign in</a> --}}
-
 
 <div class="navi">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-0">
@@ -30,7 +21,7 @@
       </li>
 
        <li class="nav-item active">
-        <a class="nav-link" href="/signout">Signout <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/home">Signout <span class="sr-only">(current)</span></a>
       </li>
 
       {{!-- <li class="nav-item dropdown">
