--- a/fullstack-project/views/product.hbs
+++ b/fullstack-project/views/product.hbs
@@ -1,28 +1,65 @@
-<h2>This is product page! User will be able to see products here</h2>
 
-<form action="/product">
-    <button>Get products</button>
-</form>
+<div class="navi">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-0">
+  <a class="navbar-brand" href="#">Artisan</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-  {{!-- <div class="row d-flex justify-content-center">
-  {{#each products}}
-    <figure>
-      <img src={{this.resizedUrl}} alt={{this.description}}>
-      <p>{{this.description}}</p>
-    </figure>
-  {{/each}}
-</div>    --}}
+   <form class="form-inline  ">
+      <input class="form-control " id="inputdefault" width="100px" height="50px" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
+    </form> 
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto py-md-3">
+        {{!-- mr-auto --}}
+     {{!-- <li class="nav-item active">
+        <a class="nav-link" href="/signin">User sign in <span class="sr-only">(current)</span></a>
+      </li>
+       <li class="nav-item active">
+        <a class="nav-link" href="/sellersignin">Seller sign in <span class="sr-only">(current)</span></a>
+      </li> --}}
+
+       <li class="nav-item active">
+        <form action="/" method="POST">
+        <button class="btn btn-dark">Signout</button></form> 
+      </li>
+
+      {{!-- <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/">Action</a>
+          <a class="dropdown-item" href="/">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li> --}}
+    </ul>
+   
+  </div>
+</nav>
+
+
 
 <div class="seller-products">
 {{#each products}}
 <div class="card col-4" style="width: 18rem;">
   <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
   <div class="card-body">
-    {{!-- <ul class="list-group list-group-horizontal"> --}}
       <h5 class="card-title">Card title</h5> 
       <p class="card-text">{{this.description}}</p> 
+      <p>{{this._id}}</p>
       <p>$ {{this.price}}</p>
-      {{!-- <a href="#" class="btn btn-primary">Order</a> --}}
+      <form action="/order">
+         <button class="btn btn-dark">Order</button>
+         {{!-- <a href="#" class="btn btn-primary">Order</a> --}}
+      </form>
     </ul>
   </div>
 </div>
