--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -13,33 +13,24 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto py-md-3">
         {{!-- mr-auto --}}
-     <li class="nav-item active">
-        <a class="nav-link" href="/signin">User sign in <span class="sr-only">(current)</span></a>
+     {{#if user}}
+        <form action="/" method="POST">
+        <button class="btn btn-dark">Buyer sign out</button>
+        </form> 
+      {{else}}
+      {{!-- <li class="nav-item active">
+        <a class="nav-link" href="/">Buyer sign out <span class="sr-only">(current)</span></a>
+      </li> --}}
+      {{!-- <li class="nav-item active"> --}}
+        
+        <li class="nav-item active">
+        <a class="nav-link" href="/signin">Buyer sign in <span class="sr-only">(current)</span></a>
       </li>
+      {{/if}}
        <li class="nav-item active">
         <a class="nav-link" href="/sellersignin">Seller sign in <span class="sr-only">(current)</span></a>
       </li>
-
-       <li class="nav-item active">
-        <a class="nav-link" href="/home">Signout <span class="sr-only">(current)</span></a>
-      </li>
-
-      {{!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/">Action</a>
-          <a class="dropdown-item" href="/">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> --}}
     </ul>
-   
   </div>
 </nav>
 
