--- a/fullstack-project/views/authentication/usersignup.hbs
+++ b/fullstack-project/views/authentication/usersignup.hbs
@@ -1,12 +1,27 @@
+<div class="navi">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-0">
+  <a class="navbar-brand" href="#">Artisan</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav ml-auto py-md-3">
+        <li class="nav-item active">
+        <a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+      </li> 
+    </ul>
+  </div>
+</nav>
+</div>
+
 <div class="top-card-space">
 <div class="card" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/signup">
         <div class="card-body">
-            <h5 class="card-title"><strong> Create artisian account</strong></h5>
+            <h5 class="card-title"><strong> Create artisian buyer account</strong></h5>
         <br>
             <label for="username">Name</label>
-            <input type="text" name="name" placeholder="Name">
-            
+            <input type="text" name="name" placeholder="Name">    
         <br>
         <br>
             <label for="Email">Email</label>
@@ -17,8 +32,7 @@
             <input type="password" name="password" required placeholder="Password">
         <br>
         <br>
-            {{!-- <button class="btn btn-primary"> Create account </button> --}}
-            <button class="btn btn-outline-info btn-lg btn-block">Create account</button>
+            <button class="btn btn-outline-secondary btn-lg btn-block">Create account</button>
         <br>
             <span>Already have an account? <a href="/signin">Sign in</a></span>
         </div>
