--- a/fullstack-project/views/product.hbs
+++ b/fullstack-project/views/product.hbs
@@ -13,55 +13,36 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto py-md-3">
-        {{!-- mr-auto --}}
-     {{!-- <li class="nav-item active">
-        <a class="nav-link" href="/signin">User sign in <span class="sr-only">(current)</span></a>
-      </li>
        <li class="nav-item active">
-        <a class="nav-link" href="/sellersignin">Seller sign in <span class="sr-only">(current)</span></a>
-      </li> --}}
-
-       <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li> 
         <form action="/" method="POST">
-        <button class="btn btn-dark">Signout</button></form> 
-      </li>
-
-      {{!-- <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/">Action</a>
-          <a class="dropdown-item" href="/">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="/">Something else here</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li> --}}
+        <button class="btn btn-dark">Sign out</button></form> 
     </ul>
-   
   </div>
 </nav>
 
 
 
-<div class="seller-products">
+{{!-- <div class="seller-products"> --}}
+  <div class="container pt-5">
+  <div class="row">
 {{#each products}}
-<div class="card col-4" style="width: 18rem;">
-  <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
-  <div class="card-body">
+
+    <div class="col-lg">
+    <div class="card" style="width: 21rem;">
+      <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
+    <div class="card-body">
       <h5 class="card-title">Card title</h5> 
       <p class="card-text">{{this.description}}</p> 
       <p>{{this._id}}</p>
       <p>$ {{this.price}}</p>
       <form action="/order">
-         <button class="btn btn-dark">Order</button>
-         {{!-- <a href="#" class="btn btn-primary">Order</a> --}}
+         <button class="btn btn-dark btn-lg" value=this._id>Order</button>
       </form>
     </ul>
   </div>
+</div>
 </div>
 {{/each}}
 </div>
