--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -10,42 +10,53 @@
 
 {{!-- Navigator the same as the nav --}}
 
-<div class="seller-products">
-{{#each images}}
-<div class="card col-4" style="width: 18rem;">
-  <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
-  <div class="card-body">
-    {{!-- <ul class="list-group list-group-horizontal"> --}}
-      <h5 class="card-title">Card title</h5> 
-      <p class="card-text">{{this.description}}</p> 
-      <p>$ {{this.price}}</p>
-      {{!-- <a href="#" class="btn btn-primary">Order</a> --}}
-    </ul>
-  </div>
-</div>
-{{/each}}
-</div>
 
-<form action="/sellerPage" method="Get" enctype="multipart/form-data">
-    <button>View collection</button>
-</form>
+
+
 
 <div class="container">
   <form method="POST" action="/sellerPage" enctype="multipart/form-data">
-    <div class="form-group">
-      <label for="upload-file">Image</label>
-      <input id="upload-file" required class="form-control" type="file" name="file">
-    </div>
+    
+   
     <div class="form-group">
       <label for="upload-description">Description</label>
-      <textarea id="upload-description" class="form-control" name="description" placeholder="Description of File"></textarea>
+      <textarea id="upload-description" class="form-control" name="description" placeholder="Summary of the product"></textarea>
     </div>
+    <div class="form-group">
+      {{!-- <label for="upload-deliverytime">Delivery Time (Days)</label>
+      <textarea id="upload-description" class="form-control" name="description" placeholder="How much day will your delivery date"></textarea>
+    </div> --}}
     <div>
       <label for="price">Price</label>
       <input id="price" required type="text" name="price" placeholder="price">
+    </div>
+    <div class="form-group">
+      <label for="upload-file">Image</label>
+      <input id="upload-file" required class="form-control" type="file" name="file">
     </div>
     <button class="btn btn-primary">Upload file</button>
   </form>
 </div>
 
-<a href="/authentication/signout">Signout</a>
+<div class="seller-products">
+{{#each images}}
+{{!-- <form action="/sellerPage" method="POST" > --}}
+
+<div class="card" style="width: 18rem;">
+  <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
+  <div class="card-body">
+    {{!-- <ul class="list-group list-group-horizontal"> --}}
+      <h5 class="card-title">Card title</h5> 
+      <p class="card-text">{{this.description}}</p> 
+      <p>
+        <input id="price" required type="text" name="price" placeholder=" $ {{this.price}}">
+
+       </p>
+      
+      <a  href="/sellerPage/{{this.id}}" class="btn btn-primary">Delete</a>
+      {{!-- <a  href="/sellerPage/{{this.id}}" class="btn btn-primary">Edit</a> --}}
+  </div>
+</div>
+</form>
+{{/each}}
+</div>
