--- a/fullstack-project/views/authentication/sellersignup.hbs
+++ b/fullstack-project/views/authentication/sellersignup.hbs
@@ -24,11 +24,27 @@
             <input type="text" name="name" placeholder="Name"> 
         <br>
         <br>
-            <label for="Email">Email</label>
+            <label for="email">Email</label>
             <input type="email" name="email" required placeholder="Email">
         <br>
+         <br>
+            <label for="city">City</label>
+            <input type="city" name="city" required placeholder="City">
         <br>
-            <label for="Password">Password</label>
+         <br>
+            <label for="postalcode">Postal Code</label>
+            <input type="postalcode" name="postalcode" required placeholder="Postal Code">
+        <br>
+         <br>
+            <label for="country">Country</label>
+            <input type="country" name="country" required placeholder="Country">
+        <br>
+         <br>
+            <label for="phonenumber">Phone Number</label>
+            <input type="phonenumber" name="phonenumber" placeholder="Phone Number">
+        <br>
+        <br>
+            <label for="password">Password</label>
             <input type="password" name="password" required placeholder="Password">
         <br>
         <br>
