Product order working now, Email notfication also added

--- a/fullstack-project/views/authentication/usersignup.hbs
+++ b/fullstack-project/views/authentication/usersignup.hbs
@@ -18,7 +18,7 @@
 <div class="card" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/signup">
         <div class="card-body">
-            <h5 class="card-title"><strong> Create artisian buyer account</strong></h5>
+            <h5 class="card-title"><strong> Create buyer account</strong></h5>
         <br>
             <label for="username">Name</label>
             <input type="text" name="name" placeholder="Name">    
