--- a/fullstack-project/views/home.hbs
+++ b/fullstack-project/views/home.hbs
@@ -30,6 +30,9 @@
        <li class="nav-item active">
         <a class="nav-link" href="/sellersignin">Seller sign in <span class="sr-only">(current)</span></a>
       </li>
+       <form action="/" method="POST">
+        <button class="btn btn-dark">Sign out</button>
+      </form> 
     </ul>
   </div>
 </nav>
@@ -487,15 +490,15 @@
             >
               <!-- single contact -->
               <div class="text-capitalize">
-                <span class="footer-icon mr-2">
+                <span class="footer-icon mr-5 ml-5">
                   <i class="fas fa-map"></i>
                 </span>
-                Portugal & Ethiopia
+                Art & Creation
               </div>
               <!-- end of single contact -->
               <!-- single contact -->
               <div class="text-capitalize">
-                <span class="footer-icon mr-2">
+                <span class="footer-icon mr-5 pr-5">
                   <i class="fas fa-phone"></i>
                 </span>
                 Phone Support : + (351) 111 2222
@@ -503,10 +506,10 @@
               <!-- end of single contact -->
               <!-- single contact -->
               {{!-- <div class="text-capitalize"> --}}
-                <span class="footer-icon mr-2">
+                <span class="footer-icon mr-2 ml-5">
                   <i class="fas fa-envelope"></i>
                 </span>
-                Email: support@artisan.com
+                Email: localsartisan@gmail.com
               </div>
               <!-- end of single contact -->
             </div>
@@ -515,8 +518,7 @@
       </div>
 
        <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2019 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> Andre & Kidist</a>
+  <div class="footer-copyright text-center py-3">© 2019 Artisan
   </div>
   <!-- Copyright -->
     </footer>
