Buyer profile created, including CRUD operation

--- a/fullstack-project/views/product.hbs
+++ b/fullstack-project/views/product.hbs
@@ -16,6 +16,9 @@
        <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li> 
+      <li class="nav-item active">
+        <a class="nav-link" href="/buyer-profile">Profile <span class="sr-only">(current)</span></a>
+      </li> 
         <form action="/" method="POST">
         <button class="btn btn-dark">Sign out</button></form> 
     </ul>
