Buyer signin static method created, modification of look and content in 21 pages

--- a/fullstack-project/views/authentication/sellersignin.hbs
+++ b/fullstack-project/views/authentication/sellersignin.hbs
@@ -15,10 +15,10 @@
 </div>
 
 <div class="top-card-space">
-<div class="card" style="width: 22rem;" style="height: 500px;">
+<div class="card text-center" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/sellersignin">
         <div class="card-body">
-            <h5 class="card-title"><strong> Seller - Sign in</strong></h5>
+            <h5 class="card-title"><strong>Artisan seller - Sign in</strong></h5>
         <br>
             <label for="Email">Email</label>
             <input type="email" name="email" required placeholder="Email">
