--- a/fullstack-project/views/authentication/usersignin.hbs
+++ b/fullstack-project/views/authentication/usersignin.hbs
@@ -15,7 +15,7 @@
 </div>
 
 <div class="top-card-space">
-<div class="card" style="width: 22rem;" style="height: 500px;">
+<div class="card text-center" style="width: 22rem;" style="height: 500px;">
     <form method="POST" action="/signin">
         <div class="card-body">
             <h5 class="card-title"><strong>Buyer - Sign in</strong></h5>
