--- a/fullstack-project/views/order.hbs
+++ b/fullstack-project/views/order.hbs
@@ -1,4 +1,3 @@
-<div class="navi">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-0">
   <a class="navbar-brand" href="#">Artisan</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,16 +6,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto py-md-3">
        <li class="nav-item active">
-        <a class="nav-link" href="/sellersignin"> List of order <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li> 
+       <li class="nav-item active">
+        <a class="nav-link" href="/product">Products <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/listoforder"> List of order <span class="sr-only">(current)</span></a>
       </li> 
         <form action="/" method="POST">
-        <button class="btn btn-dark">Signout</button></form> 
+        <button class="btn btn-dark">Sign out</button></form> 
     </ul>
   </div>
 </nav>
 
 
-  <div class="container pt-3">
+  <div class="container pt-5">
   <div class="row">
     <div class="col-lg">
     <div class="card" style="width: 30rem;">
@@ -37,12 +42,16 @@
 </div>
 
 
-    <div class="col-lg">
+    <div class="col-lg p-2">
     <div class="card" style="width: 30rem;">
     <div class="card-body">
-      <h5 class="card-title">Contact Information</h5> 
-      <p class="card-text">Name: {{oneSeller.name}}</p> 
-      <p>Email: {{oneSeller.email}}</p>
+      <h4 class="card-title"><strong>Contact Information</strong></h4> 
+      <p class="card-text"><strong>Name: </strong>{{oneSeller.name}}</p> 
+      <p class="card-text"><strong>Pickup location: </strong>{{oneSeller.postalcode}}, {{oneSeller.city}}</p> 
+      <p class="card-text">{{oneSeller.country}}</p> 
+      <p class="card-text"><strong>Phone number: </strong>{{oneSeller.phonenumber}}</p> 
+      <p class="card-text"><strong>Email: </strong>{{oneSeller.email}}</p> 
+      <p></p>
       {{!-- <a href="/product/{{oneSeller._id}}" class="btn btn-dark">Order</a> --}}
     </ul>
   </div>
@@ -50,6 +59,8 @@
 </div>
  </div>
 </div> 
+
+
 
 
 
