--- a/fullstack-project/views/product.hbs
+++ b/fullstack-project/views/product.hbs
@@ -6,10 +6,10 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-   {{!-- <form class="form-inline  ">
+    <form class="form-inline">
       <input class="form-control " id="inputdefault" width="100px" height="50px" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
-    </form>  --}}
+    </form>  
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto py-md-3">
