--- a/fullstack-project/views/sellerPage.hbs
+++ b/fullstack-project/views/sellerPage.hbs
@@ -6,11 +6,11 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto py-md-3">
-       {{!-- <li class="nav-item active">
+       <li class="nav-item active">
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li> 
       <li class="nav-item active">
-        <a class="nav-link" href="/buyer-profile">Profile <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/seller-profile">Profile <span class="sr-only">(current)</span></a>
       </li>  --}}
         <form action="/" method="POST">
         <button class="btn btn-dark">Sign out</button></form> 
@@ -25,20 +25,25 @@
 <div class="container">
   <form method="POST" action="/sellerPage" enctype="multipart/form-data">
     <div class="form-group">
-    <label for="title">Product Title</label>
-      <textarea id="title" class="form-control" name="title" placeholder="Title of the product"></textarea>
-    </div>
+    <label for="product-category">Product Category</label>
+    <select class="form-control" id="product-category" name="productcategory" placeholder="Product Category">
+      <option>Custom Clothings</option>
+      <option>Food & Drinks</option>
+      <option>Paintings</option>
+      <option>Pottery</option> 
+      </select>
+      </div>
     <div class="form-group">
       <label for="upload-description">Description</label>
       <textarea id="upload-description" class="form-control" name="description" placeholder="Summary of the product"></textarea>
     </div>
-    {{!-- <div class="form-group"> --}}
-      {{!-- <label for="upload-deliverytime">Delivery Time (Days)</label>
-      <textarea id="upload-description" class="form-control" name="description" placeholder="How much day will your delivery date"></textarea>
-    </div> --}}
     <div class="form-group">
       <label for="price">Price</label>
       <input id="price" class="form-control" required type="text" name="price" placeholder="Price">
+    </div>
+    <div class="form-group">
+      <label for="delivery">Expected delivery</label>
+      <input id="delivery" class="form-control" required type="delivery" name="delivery" placeholder="Number of days required to deliver the product">
     </div>
     <div class="form-group">
       <label for="upload-file">Image</label>
@@ -53,14 +58,15 @@
 
 <div class="seller-products">
 {{#each images}}
-<div class="card" style="width: 18rem;">
+<div class="card text-center" style="width: 18rem;">
   <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
   <div class="card-body">
-      <h5 class="card-title">{{this.title}}</h5> 
+      <h5 class="card-title">{{this.productcategory}}</h5> 
       <p class="card-text">{{this.description}}</p> 
-      <p>{{this.price}}</p>
-      <a href="/sellerPage/edit/{{this._id}}" class="btn btn-outline-primary btn-lg">Edit</a>
-      <a href="/sellerPage/delete/{{this._id}}" class="btn btn-outline-danger btn-lg">Delete</a>
+      <p class="card-text">By: {{this.sellerName}}</p> 
+      <p>€ {{this.price}}</p>
+      <a href="/sellerPage/edit/{{this._id}}" class="btn btn-outline-primary">Edit</a>
+      <a href="/sellerPage/delete/{{this._id}}" class="btn btn-outline-danger">Delete</a>
   </div>
 </div>
 </form>
