--- a/fullstack-project/views/order.hbs
+++ b/fullstack-project/views/order.hbs
@@ -26,16 +26,14 @@
     <div class="col-lg">
     <div class="card" style="width: 30rem;">
       <img src="{{oneProduct.resizedUrl}} " class="card-img-top" alt="{{oneProduct.description}}">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5> 
+    <div class="card-body text-center">
+      <h5 class="card-title"> <strong>{{oneProduct.productcategory}}</strong></h5> 
       <p class="card-text">{{oneProduct.description}}</p> 
-      <p>$ {{oneProduct.price}}</p>
-      {{!-- <a href="/ordersuccessful" class="btn btn-dark btn-lg">Order</a> --}}
-
+      <p class="card-text"><strong>Artisan: </strong>{{oneProduct.sellerName}}</p> 
+      <p class="card-text">€ {{oneProduct.price}}</p>
       <form action="/ordersuccessful" method="POST">
           <button class="btn btn-dark btn-lg">Order</button>
       </form>
-
     </ul>
   </div>
 </div>
@@ -45,14 +43,13 @@
     <div class="col-lg p-2">
     <div class="card" style="width: 30rem;">
     <div class="card-body">
-      <h4 class="card-title"><strong>Contact Information</strong></h4> 
+      <h4 class="card-title text-center"><strong>Contact Information</strong></h4> 
+      <br>
       <p class="card-text"><strong>Name: </strong>{{oneSeller.name}}</p> 
-      <p class="card-text"><strong>Pickup location: </strong>{{oneSeller.postalcode}}, {{oneSeller.city}}</p> 
-      <p class="card-text">{{oneSeller.country}}</p> 
+      <p class="card-text"><strong>Pickup location: </strong>{{oneSeller.postalcode}}, {{oneSeller.city}}, {{oneSeller.country}}</p> 
       <p class="card-text"><strong>Phone number: </strong>{{oneSeller.phonenumber}}</p> 
       <p class="card-text"><strong>Email: </strong>{{oneSeller.email}}</p> 
       <p></p>
-      {{!-- <a href="/product/{{oneSeller._id}}" class="btn btn-dark">Order</a> --}}
     </ul>
   </div>
 </div>
