--- a/fullstack-project/views/product.hbs
+++ b/fullstack-project/views/product.hbs
@@ -30,12 +30,13 @@
   <div class="row">
 {{#each products}}
     <div class="col-lg">
-    <div class="card" style="width: 21rem;">
+    <div class="card text-center" style="width: 21rem;">
       <img src="{{this.resizedUrl}} " class="card-img-top" alt="{{this.description}}">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5> 
+      <h5 class="card-title"> <strong>{{this.productcategory}}</strong></h5> 
       <p class="card-text">{{this.description}}</p> 
-      <p>$ {{this.price}}</p>
+      <p class="card-text"><strong>Artisan: </strong>{{this.sellerName}}</p> 
+      <p class="card-text">€ {{this.price}}</p>
       <a href="/product/{{this._id}}" class="btn btn-dark btn-lg">View</a>
     </ul>
   </div>
